# Cprac

./: .gitignore  Doxyfile  README.md  run.sh
annealing/: 11.csv  14.csv  2.csv  7.csv  generator.cpp  heatmap.py  main.cpp  mutation.h  parallel_results  parallel_test.cpp  plots.py  results  results_description  schedule.h  simulated_annealing.h  temperature.h
annealing/input/: 0.csv  1.csv  10.csv  100.csv  101.csv  102.csv  103.csv  104.csv  105.csv  106.csv  107.csv  108.csv  109.csv  110.csv  111.csv  112.csv  113.csv  114.csv  115.csv  116.csv  117.csv  118.csv  119.csv  12.csv  120.csv  121.csv  122.csv  123.csv  124.csv  125.csv  126.csv  127.csv  128.csv  129.csv  13.csv  130.csv  131.csv  132.csv  133.csv  134.csv  (+159 more)
annealing/parallel_annealing/: 12.csv  13.csv  16.csv  19.csv  20.csv  5.csv
annealing/parallel_input/: 1.csv  10.csv  15.csv  17.csv  18.csv  3.csv  4.csv  6.csv  8.csv  9.csv
functions/src/: factory.h  functions.h  main  main.cpp  root_finding.h
functions/tests/: tests  tests.cpp
input/: MatRat1.txt  MatRat2.txt  MatRat3.txt  MatRatIden.txt  MatRatMul.txt  MatRatSum.txt
matrices/: run.sh
matrices/src/Exceptions/: Exceptions.h
matrices/src/Matrix/: Matrix.h
matrices/src/Matrix/Tests/: test_matrices.cpp
matrices/src/Rational_number/: Rational_number.h
src/: CMakeLists.txt  main.cpp
src/Exceptions/: CMakeLists.txt
src/Matrix/: CMakeLists.txt  Matrix.h
src/Matrix/Tests/: test_matrices.cpp
src/Rational_number/: CMakeLists.txt  Rational_number.h
src/Rational_number/Tests/: test_rational_numbers.cpp
(+1 files in other folders)
